tests/semantic/valid/initializer_outer.mc
int x = 1;
{
    int x = x + 1;
    print x;
}
print x;
