tests/semantic/invalid/if_condition.mc
int count = 1;
if (count) {
    print count;
}
